Refactoring : Rewrite PresidentsAlive